# sample-Nova-Sonic-AgentCore-Healthcare-Call-Center

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
backend/: .gitignore  Dockerfile  agent.py  data_seed.py  pyproject.toml  requirements.txt
backend/clients/: __init__.py  dynamodb_client.py  sns_client.py
backend/prompts/: healthcare_system_prompt.txt
backend/tools/: __init__.py  authenticate_patient.py  book_appointment_slot.py  cancel_appointment.py  confirm_appointment.py  escalate_to_agent.py  find_available_slots.py  record_health_update.py
docs/: DEPLOYMENT.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css  main.tsx
frontend/src/components/: Avatar.tsx  Navbar.tsx
frontend/src/components/speech-to-speech/: SpeechToSpeech.tsx
frontend/src/components/ui/: radio-group.tsx
frontend/src/lib/api/: appointments.ts
frontend/src/lib/audio/: AudioCapture.ts  AudioPlayback.ts
frontend/src/lib/auth/: AuthService.ts
frontend/src/lib/websocket/: AgentCoreWebSocketManager.ts
frontend/src/routes/: Login.tsx  Root.tsx  SpeechToSpeechPage.tsx
frontend/src/styles/: speech-to-speech.css
infrastructure/: app.py  cdk.json  pyproject.toml  requirements.txt
infrastructure/cdk_constructs/: __init__.py  agentcore_construct.py  cognito_construct.py  dynamodb_construct.py  sns_construct.py
infrastructure/scripts/: seed_data.py
infrastructure/stacks/: __init__.py  healthcare_stack.py
