[project]
name = "nova-sonic-healthcare-infrastructure"
version = "0.1.0"
description = "Nova Sonic Healthcare Call Center - CDK Infrastructure"
requires-python = ">=3.12"
dependencies = [
    # AWS CDK
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.0.0",
    # AgentCore alpha construct for Runtime deployment
    "aws-cdk.aws-bedrock-agentcore-alpha>=2.236.0a0",
    # CDK Nag for security/best-practice checks
    "cdk-nag>=2.28.0",
    # AWS SDK for Python (for scripts like seed_data.py)
    "boto3>=1.35.0",
]
